tdf#130573 labels exchanged in export to BMP

In the commit below, I removed the 1-bit dithered output,
and this commit just fixes up the places I missed in the
export dialog and the settings file.

regression from
    commit b5699cd01b6a52906880c107bac6f3802ea7353d
    Date:   Wed Feb 8 16:18:32 2017 +0200
    convert BmpConversion to scoped enum

Change-Id: Ibbda8aefbac261ff37ffab7223714f5d0343c692